<resources>
    <string name="app_name">Diy.LS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">首页动画</string>
    <string name="initSys">初始化系统设置</string>
    <string name="closeSyslock">点击关闭系统锁屏(避免双锁屏)</string>
    <string name="notice">个别机型注意</string>
    <string name="notice1">1.MIUI(V6)请在[权限管理]中打开[显示悬浮窗]&#160;&#160;&#160;&#160;&#160;</string>
    <string name="notice2">2.MIUI(V6)请在[权限管理]中设置信任 Mr.Locker</string>
    <string name="notice3">3.MIUI(V6) Flyme 请在安全中心→权限管理→&#160;&#160;&#160;&#160;&#160;\n自启动→开启Mr.Locker</string>
    <string name="notice4">4.Flyme 请在安全中心→省电模式→右下角&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\n待机耗电管理→开启Mr.Locker</string>
    <string name="notice5">5.请在优化大师等一切大师中将 Mr.Locker&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; \n设为白名单</string>
    <string name="finish_init">完成</string>


    <string name="home_title">请设置解锁方式:</string>
    <string name="home_mode_slide">滑动解锁</string>
    <string name="home_mode_gesture">手势解锁</string>
    <string name="home_blackground">Set Locker Background Img:</string>
    <string name="home_chose_image">Choose Picture</string>
    <string name="home_notice">未设置手势,自动跳转手势设置界面</string>
    <string name="home_face_notice">未保存人脸,自动跳转初始化界面</string>
    <string name="home_face_net_notice">请在联网状态下使用人脸识别功能.</string>

    <string name="detial_setting_detial">详细设置</string>
    <string name="detial_setting_showmenu">Display status bar</string>
    <string name="detial_setting_shake">Vibrate when unlocking</string>
    <string name="detial_setting_showline">隐藏手势连接线</string>

    <string name="gesture_setting_note">绘制解锁图案</string>
    <string name="gesture_setting_note1">解锁图案已记录</string>
    <string name="gesture_setting_note2">再次绘制解锁图案进行确认</string>
    <string name="gesture_setting_note3">您的新解锁图案</string>
    <string name="gesture_setting_reset">重绘</string>
    <string name="gesture_setting_set_continue">继续</string>
    <string name="gesture_setting_set_sure">确认</string>
    <string name="gesture_setting_input">请输入手势</string>
    <string name="gesture_setting_save_success">手势保存成功</string>
    <string name="gesture_setting_save_error">两次手势输入不一致，请重绘。</string>

    <string name="gesture_note">无手势密码,自动切换滑动解锁。</string>

    <string name="gesture_unlock">请绘制解锁图案</string>

    <string name="update">正在检查更新,请查看弹窗信息,若无则为最新版本.</string>

    <string name="about">About</string>

    <string name="about_1">1. Thanks to all open source project authors.</string>
    <string name="about_2">2. Contact us: kkxx1062@gmail.com.</string>
    <string name="about_3">3. Version: 0.0.1</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="unlock_slide">Slide</string>
    <string name="unlock_pattern">Pattern</string>

</resources>
