<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/about_linearlayout"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_item_shap"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content">

    <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/text_init3"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"/>

    <TextView
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_1"/>

    <TextView
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_2"/>
    <TextView
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_3"/>
</LinearLayout>