<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:match="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.kkxx.diyls.matchview.MatchTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            match:textSize="10dp"
            android:layout_gravity="center_horizontal"
            match:text="@string/app_name"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_item_shap"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

        <Button
                android:id="@+id/chose_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/select_img_btn_selector"
                android:text="@string/home_chose_image"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        <LinearLayout
                android:layout_marginTop="20dp"
                android:id="@+id/btn_closesys"
                android:layout_width="fill_parent"
                android:gravity="center_vertical"
                android:background="@drawable/button_item_shap"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_marginLeft="20dp"
                    android:id="@+id/text_init2"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detial_setting_showmenu"/>

            <com.kkxx.diyls.utils.switchbutton.SwitchButton
                    android:id="@+id/btn_detialsetting_showmenu"
                    android:layout_marginLeft="15dp"
                    style="@style/MaterialDesignStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="14dp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:gravity="center_vertical"
                android:background="@drawable/button_item_shap"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/detial_setting_shake"/>

            <com.kkxx.diyls.utils.switchbutton.SwitchButton
                    android:id="@+id/btn_detialsetting_shake"
                    android:layout_marginLeft="15dp"
                    style="@style/MaterialDesignStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>